KTS-3628 "Add expand/collapse on each config group" Fixed. Added new css classes.
Committed by: Megan Watson
Reviewed by: Kevin Fourie



git-svn-id: https://kt-dms.svn.sourceforge.net/svnroot/kt-dms/trunk@9192 c91229c3-7414-0410-bfa2-8a42b809f60b

--- a/resources/css/kt-framing.css
+++ b/resources/css/kt-framing.css
@@ -2019,6 +2019,21 @@ hr {
     display: block;
 }
 
+.collapse
+{
+    padding-left: 20px;
+    border: 0px;
+    background: url(../graphics/plus.gif) no-repeat;
+}
+
+
+.expand
+{
+    padding-left: 20px;
+    border: 0px;
+    background: url(../graphics/minus.gif) no-repeat;
+}
+
 
 
 /* -------------------------- iframe browse ------------------------ */
